--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,6 @@
     <title>Hello World</title>
   </head>
   <body>
-    <script src="bundle.js"></script>
+    <script src="bundle/main.js"></script>
   </body>
 </html>
