got bower dependencies working with gulp and watch

--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <title>Hello World</title>
+    <link rel="stylesheet" href="bundle/foundation.css">
   </head>
   <body>
+    <script src="bundle/bower.js"></script>
     <script src="bundle/main.js"></script>
   </body>
 </html>
