--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Hello World</title>
     <link rel="stylesheet" href="bundle/foundation.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <script src="bundle/bower.js"></script>
